--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,7 +11,7 @@ RUN apk --no-cache --update add --virtual build-dependencies build-base python \
   && npm cache clean \
   && apk del build-dependencies \
   && adduser -D humankind \
-  && chmod -R humankind /usr/src/api
+  && chown -R humankind /usr/src/api
 
 USER humankind
 
